# Otus_Bayan

./: CMakeLists.txt  Doxyfile
.github/workflows/: Action.yml
documentation/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html
include/: arguments_parser.h  bayan.h
src/: arguments_parser.cpp  bayan.cpp  main.cpp
